recursion.lessons.recursion.koch.Koch.scala.error
Koch:20: error: not found: value levels
      	snowFlake(levels-1,length/3)
                  ^